show utxo sets in transaction diagram